[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.128.6",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
    "psycopg2-binary>=2.9.11",
]
